--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -208,6 +208,7 @@ nav li:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 0 7em;
     position: relative;
     margin-top: 90px;
   }
@@ -1006,11 +1007,6 @@ footer {
   header {
     width: 100%;
     height: 100vh;
-  }
-
-  .heading-title img {
-    width: 50%;
-    height: auto;
   }
 
   .nav-bar-logo {
