--- a/src/app/contact-page/contact-page.component.css
+++ b/src/app/contact-page/contact-page.component.css
@@ -41,6 +41,7 @@ form button {
 main {
   display: flex;
   justify-content: space-around;
+  position: relative;
   align-items: center;
   width: 100%;
   padding: 57px 0;
