--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -27,6 +27,46 @@ nav {
   padding-left: 4em;
 }
 
+.mobile-menu {
+  padding: 5em 5em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  background: #150e28;
+  backdrop-filter: blur(30px);
+  z-index: 6;
+}
+
+.close-icon {
+  display: flex;
+  justify-content: end;
+  cursor: pointer;
+}
+
+.mobile-reg {
+  margin-top: 9px;
+}
+
+.nav-items ul {
+  list-style: none;
+  gap: 20px;
+}
+
+.nav-items ul li {
+  color: #fff;
+  margin-bottom: 20px;
+  font-family: "Inter";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -1px;
+}
+
 .nav-close {
   position: absolute;
   right: 10%;
@@ -83,12 +123,16 @@ nav li:hover {
   border-bottom: 1px solid grey;
 }
 
+.nav-bar-menu {
+  cursor: pointer;
+}
+
 .hero {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin-top: 3em;
+  margin-top: 6em;
 }
 
 .caption {
